err/py2oracle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/JPype1-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/JayDeBeApi-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/jaydebeapi'...
Listing './lib/python3.5/site-packages/jpype'...
Listing './lib/python3.5/site-packages/jpype/awt'...
Listing './lib/python3.5/site-packages/jpype/awt/event'...
Listing './lib/python3.5/site-packages/jpypex'...
Listing './lib/python3.5/site-packages/jpypex/swing'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py2oracle'...
Compiling './lib/python3.5/site-packages/py2oracle/__init__.py'...
***   File "./lib/python3.5/site-packages/py2oracle/__init__.py", line 9
    '''
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 95-96: truncated \UXXXXXXXX escape

Listing './lib/python3.5/site-packages/py2oracle/jar'...
Compiling './lib/python3.5/site-packages/py2oracle/jaydebe2Oracle.py'...
***   File "./lib/python3.5/site-packages/py2oracle/jaydebe2Oracle.py", line 38
    print 'wrap up'
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/py2oracle/jaydebe2OracleOO.py'...
***   File "./lib/python3.5/site-packages/py2oracle/jaydebe2OracleOO.py", line 38
    print 'wrap up'
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/py2oracle-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
